<resources>
    <string name="app_name">CaveSurvey</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="required">Required</string>
    <string name="invalid">Invalid</string>
    <string name="success">Success</string>
    <string name="sk_paldin">Paldin</string>
    <string name="home_no_projects">Create survey</string>
    <string name="home_new_project">New survey</string>
    <string name="home_button_new_exists">Survey %1$s exists!</string>
    <string name="home_delete_project">Delete survey %1$s?</string>
    <string name="home_lang"><u>Language</u></string>
    <string name="new_title">New Survey</string>
    <string name="new_button_create">Create</string>
    <string name="project_header">Survey Name</string>
    <string name="project_name">Name</string>
    <string name="project_name_required">Enter name</string>
    <string name="project_name_characters">Contains bad characters</string>
    <string name="project_import">Import</string>
    <string name="import_success">Import successfull</string>
    <string name="main_leg">Current leg</string>
    <string name="main_button_change">Select</string>
    <string name="main_button_change_title">Select leg</string>
    <string name="main_button_add">Add</string>
    <string name="main_button_data">Data</string>
    <string name="main_button_about">About</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_map">Map</string>
    <string name="map_plan">Plan</string>
    <string name="map_section">Section</string>
    <string name="main_table_header_from">From</string>
    <string name="main_table_header_to">To</string>
    <string name="main_table_header_more">More</string>
    <string name="main_table_header_note">Note</string>
    <string name="main_table_header_drawing">Drawing</string>
    <string name="main_table_header_photo">Photo</string>
    <string name="leg">Leg</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="distance">Length</string>
    <string name="azimuth">Compass</string>
    <string name="slope">Clinometer</string>
    <string name="point_photos_header">Photos</string>
    <string name="point_photo_label">Photo %1$s</string>
    <string name="point_vectors_header">Vectors</string>
    <string name="point_vectors_counter">Vector #</string>
    <string name="point_vectors_delete">Delete vector %1$s?</string>
    <string name="point_swipe_not_possible">Gallery border reached</string>
    <string name="slope_column">Clinometer:</string>
    <string name="sensor">Sensor</string>
    <string name="accuracy">Accuracy</string>
    <string name="main_add_title">Add new</string>
    <string name="main_add_leg">Next Leg</string>
    <string name="main_add_branch">Next Gallery</string>
    <string name="main_add_middlepoint">Middle point</string>
    <string name="main_add_note">Note</string>
    <string name="main_add_sketch">Draw</string>
    <string name="main_add_photo">Photo</string>
    <string name="main_add_gps">GPS</string>
    <string name="main_add_vector">Add vector</string>
    <string name="main_reverse">Reverse</string>
    <string name="main_reverse_message">Direction and slope of leg %1$s will be reversed!</string>
    <string name="table_sketch_prefix">S</string>
    <string name="table_note_prefix">N</string>
    <string name="table_photo_prefix">P</string>
    <string name="table_location_prefix">L</string>
    <string name="table_vector_prefix">V</string>
    <string name="gallery_after_first_point">Not available for first leg</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_exit_confirmation_question">End survey?</string>
    <string name="point_save">Save</string>
    <string name="point_delete">Delete</string>
    <string name="note_title">Note for</string>
    <string name="note_save">Save</string>
    <string name="note_saved">Saved</string>
    <string name="vector_button_add_again">Save + New</string>
    <string name="sketch_pick_color">Pick a Color</string>
    <string name="sketch_pick_size">Pick a Size</string>
    <string name="sketch_pick_style">Pick a Style</string>
    <string name="sketch_pick_style_thick">Thick</string>
    <string name="sketch_pick_style_fill">Fill</string>
    <string name="sketch_pick_style_dash">Dash</string>
    <string name="sketch_saved">saved</string>
    <string name="sketch_undo">Undo</string>
    <string name="sketch_redo">Redo</string>
    <string name="sketch_save">Save</string>
    <string name="sketch_colorpicker">color picker</string>
    <string name="sketch_style">Style</string>
    <string name="sketch_size">Size</string>
    <string name="map_edit">Edit</string>
    <string name="update_project">Update</string>
    <string name="message_project_udpated">Project updated</string>
    <string name="statistics">Statistics</string>
    <string name="info_created">Created</string>
    <string name="info_galleries"># galleries</string>
    <string name="info_legs"># legs</string>
    <string name="info_total_distance">Raw length</string>
    <string name="info_chooser_open_folder">Open folder</string>
    <string name="info_num_notes"># notes</string>
    <string name="info_num_drawings"># drawings</string>
    <string name="info_num_coordinates"># coordinates</string>
    <string name="info_num_photos"># photos</string>
    <string name="info_num_vectors"># vectors</string>
    <string name="export_xls">Excel export</string>
    <string name="export_view_files">Data Files</string>
    <string name="export_done">Exported to %1$s</string>
    <string name="export_io_error">Failed to write to SD card</string>
    <string name="io_error">Unable to access SD card</string>
    <string name="measures_title">Data Input</string>
    <string name="data_input_units">Units</string>
    <string name="data_input_source">Source</string>
    <string name="options_units_distance">Distance:</string>
    <string-array name="distance_units">
        <item>Meters</item>
    </string-array>
    <string-array name="distance_read_type">
        <item>Manually</item>
        <item>From Bluetooth</item>
    </string-array>
    <string name="options_units_azimuth">Azimuth:</string>
    <string-array name="azimuth_units">
        <item>Degrees</item>
        <item>Grad</item>
    </string-array>
    <string-array name="azimuth_read_type_manually">
        <item>Manually</item>
        <item>From Bluetooth</item>
    </string-array>
    <string-array name="azimuth_read_type_all">
        <item>Manually</item>
        <item>Built-in sensor</item>
        <item>From Bluetooth</item>
    </string-array>
    <string name="options_units_slope">Slope:</string>
    <string-array name="slope_units">
        <item>Degrees</item>
        <item>Grad</item>
    </string-array>
    <string-array name="slope_read_type">
        <item>Manually</item>
        <item>From Bluetooth</item>
    </string-array>
    <string-array name="slope_read_type_all">
        <item>Manually</item>
        <item>From Bluetooth</item>
        <item>Built-in sensor</item>
    </string-array>
    <string-array name="latitude_types">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string-array name="longitude_types">
        <item>E</item>
        <item>W</item>
    </string-array>
    <string name="about_title">About CaveSurvey</string>
    <string name="about_user_guide">Help &amp; User Guide</string>
    <string name="about_paldin">http://sk-paldin.eu</string>
    <string name="about_help">https://github.com/lz1asl/CaveSurvey/wiki/User-Guide</string>
    <string name="info_distance_in">Distance in</string>
    <string name="info_azimuth_in">Azimuth in</string>
    <string name="info_slope_in">Slope in</string>
    <string name="info_azimuth_build_in_sensor">Build-in sensor configured</string>
    <string name="sensor_none">-</string>
    <string name="rotation_sensor">Rotation</string>
    <string name="magnetic_sensor">Magnetic/Accelerometer</string>
    <string name="orientation_sensor">Orientation</string>
    <string name="middle_leg_add">Add middle point</string>
    <string name="middle_leg_info">Leg  %1$s, %2$s%3$s</string>
    <string name="middle_split_at">At</string>
    <string name="middle_create">Create</string>
    <string name="middle_bad_value">Bad value</string>
    <string name="middle_leg_shorter">Too short</string>
    <string name="middle_leg_bigger">Too big</string>
    <string name="middle_no_value">Distance required</string>
    <string name="error">Error occurred</string>
    <string name="error_no_space">No space left on device</string>
    <string name="busy">Please wait&#8230;</string>
    <string name="todo">TODO</string>
    <string name="permission_required">Please authorize CaveSurvey for: %1$s</string>
    <string name="bt_devices">Devices</string>
    <string name="bt_devices_info">Paired compatible devices:</string>
    <string name="bt_new_device">New Device</string>
    <string name="bt_paired">Paired</string>
    <string name="bt_connected">Connection success</string>
    <string name="bt_not_paired">Not Paired</string>
    <string name="bt_pair_failed">Device offline or not compatible</string>
    <string name="bt_state_unknown">Unknown state</string>
    <string name="bt_state_bonded">Bonded state</string>
    <string name="bt_state_bonding">Bonding state</string>
    <string name="bt_state_none">Unknown state</string>
    <string name="bt_state_connecting">Connecting...</string>
    <string name="bt_state_connected">Connected</string>
    <string name="bt_not_on">Bluetooth not turned on</string>
    <string name="bt_not_selected">Device not selected</string>
    <string name="bt_device_connecting">Connecting with: %1$s</string>
    <string name="bt_supported_devices">Compatible with:</string>
    <string name="bt_device_connected">Connected to: %1$s</string>
    <string name="bt_device_lost">Device lost: %1$s</string>
    <string name="bt_devices_help"><u>Devices Info</u></string>
    <string name="bt_devices_help_url">https://github.com/lz1asl/CaveSurvey/wiki/Measurement-Devices</string>
    <string name="bt_scan_failed">LE devices scan failed, please restart your device</string>
    <string name="bt_device_mode">Use: %1$s measurement mode</string>
    <string name="bt_device_mode_single">single</string>
    <string name="bt_device_mode_single_or_indirect">indirect length or single </string>
    <string name="action_saved">Saved</string>
    <string name="action_deleted">Deleted</string>
    <string name="azimuth_column">Azimuth:</string>
    <string name="accuracy_column">Accuracy:</string>
    <string name="no_value_label">No value</string>
    <string name="azimuth_accuracy_no_value">-1</string>
    <string name="azimuth_orination">Orientation:</string>
    <string name="azimuth_magnetic">Magnetic:</string>
    <string name="azimuth_rotation">Rotation:</string>
    <string name="azimuth_start">Start</string>
    <string name="azimuth_stop">Stop</string>
    <string name="sensors_title"><u>Build-in Sensors</u></string>
    <string name="sensor_test_title"><u>Sensors Test</u></string>
    <string name="sensor_test_header">Test Build-in Sensors</string>
    <string name="sensor_choose_header">Choose Build-in sensor</string>
    <string name="sensor_choose_timeout">Targeting time (seconds)</string>
    <string name="sensor_choose_simultaneously">Sensors reading</string>
    <string name="settings_import_source">Import from:</string>
    <string name="settings_import_target_name">Create as:</string>
    <string name="export_openstopo_title">OpensTopo</string>
    <string name="information">Information</string>
</resources>