<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:myapp="http://schemas.android.com/apk/res-auto">
    
	<item android:id="@+id/point_action_save"
	      android:icon="@drawable/ic_action_save"
	      android:title="@string/point_save"
	      android:visible="true"
	      myapp:showAsAction="ifRoom|withText"/>
	
	<item android:id="@+id/point_action_note"
	      android:icon="@drawable/ic_action_labels"
	      android:title="@string/main_add_note"
	      android:visible="true"
	      myapp:showAsAction="ifRoom|withText"/>	
	
	<item android:id="@+id/point_action_draw"
	      android:icon="@drawable/ic_action_edit"
	      android:title="@string/main_add_sketch"
	      android:visible="true"
	      myapp:showAsAction="ifRoom|withText"/>	
	      
    <item android:id="@+id/point_action_photo"
          android:icon="@drawable/ic_action_camera"
          android:title="@string/main_add_photo"
          android:visible="true"
          android:enabled="true"
          myapp:showAsAction="ifRoom|withText"/>	
	      
    <item android:id="@+id/point_action_gps"
          android:icon="@drawable/ic_action_place"
          android:title="@string/main_add_gps"
          android:visible="true"
          android:enabled="true"
          myapp:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/point_action_add_vector"
          android:icon="@drawable/ic_action_new"
          android:title="@string/main_add_vector"
          android:visible="false"
          android:enabled="true"
          myapp:showAsAction="ifRoom|withText"/>
 
	<item android:id="@+id/point_action_delete"
	      android:icon="@drawable/ic_action_discard"
	      android:title="@string/point_delete"
	      android:visible="false"
	      android:enabled="true"
	      myapp:showAsAction="ifRoom|withText"/>	

</menu>
