<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="vertical">

        <!-- Header -->
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/sensor_test_header"
                android:ellipsize="end" android:singleLine="true"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Large"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_info_white"
                android:contentDescription="@string/information"
                android:onClick="onSensorsTestInfo"/>
        </LinearLayout>
        <!-- Table header -->
        <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:layout_margin="10dp">
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/sensor"
                      android:ellipsize="end" android:singleLine="true"/>
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/azimuth"
                      android:ellipsize="end" android:singleLine="true"/>
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/slope"
                      android:ellipsize="end" android:singleLine="true"/>
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:text="@string/accuracy"
                      android:ellipsize="end" android:singleLine="true"/>
        </LinearLayout>

        <!-- Orientation sensor -->
        <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:layout_margin="10dp">
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/azimuth_orination"/>
            <TextView android:id="@+id/azimuth_orientation"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/no_value_label"/>
            <TextView android:id="@+id/slope_orientation"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/no_value_label"/>
            <TextView android:id="@+id/azimuth_orientation_accuracy"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:text="@string/azimuth_accuracy_no_value"/>
        </LinearLayout>

        <!-- Magnetic sensor -->
        <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:layout_margin="10dp">
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/azimuth_magnetic"/>
            <TextView android:id="@+id/azimuth_magnetic"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/no_value_label"/>
            <TextView android:id="@+id/slope_magnetic"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/no_value_label"/>
            <TextView android:id="@+id/azimuth_magnetic_accuracy"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:text="@string/azimuth_accuracy_no_value"/>
        </LinearLayout>

        <!-- Rotation sensor -->
        <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:layout_margin="10dp">
            <TextView android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/azimuth_rotation"/>
            <TextView android:id="@+id/azimuth_rotation"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/no_value_label"/>
            <TextView android:id="@+id/slope_rotation"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="2"
                      android:text="@string/no_value_label"/>
            <TextView android:id="@+id/azimuth_rotation_accuracy"
                      android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:text="@string/azimuth_accuracy_no_value"/>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:layout_margin="10dp">
            <Button android:id="@+id/azimuth_btn_start"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/azimuth_start"
                    android:onClick="onStart"
                    android:enabled="false"/>
            <Button android:id="@+id/azimuth_btn_stop"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/azimuth_stop"
                    android:onClick="onStop"
                    android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>